<resources>
    <string name="app_name">ProjectManager</string>
    <string name="check_requests">Check print requests</string>
    <string name="create_request">Request print</string>
    <string name="check_reports">Check recent reports</string>
    <string name="go_printer_choice">Go to printer choice</string>
    <string name="go_menu">Go back to printer menu</string>

    <string name="lbSubject"><u>Subject of the print</u></string>
    <string name="lbAuthor"><u>Author of the print</u></string>
    <string name="lbFilament"><u>Filament used</u></string>
    <string name="lbStartTime"><u>Start time</u></string>
    <string name="lbStartDate"><u>Start date</u></string>
    <string name="lbEndTime"><u>End time</u></string>
    <string name="lbEndDate"><u>End date</u></string>
    <string name="lbStatus"><u>Status</u></string>
    <string name="lbPrinter"><u>Printer</u></string>
    <string name="lbDuration"><u>Duration</u></string>
    <string-array name="sort_array">
        <item>Sort by Post Date</item>
        <item>Sort by Start Date Timestamp</item>
    </string-array>
</resources>