<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackgroundColor"
    tools:context=".Printer1MenuActivity">

    <Button
        android:id="@+id/printerNameButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:text="Printer Name"
        android:backgroundTint="@color/DarkFrontColor"
        app:layout_constraintBottom_toTopOf="@+id/menuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:text="Printer Menu"
        android:backgroundTint="@color/DarkFrontColor"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printerNameButton" />


    <Button
        android:id="@+id/checkRequestButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/check_requests"
        android:backgroundTint="@color/DarkSpecialColor"
        app:layout_constraintBottom_toTopOf="@+id/createRequestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/createRequestButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_request"
        android:backgroundTint="@color/DarkSpecialColor"
        app:layout_constraintBottom_toTopOf="@+id/checkReportsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkRequestButton" />

    <Button
        android:id="@+id/checkReportsButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/check_reports"
        android:backgroundTint="@color/DarkSpecialColor"
        app:layout_constraintBottom_toTopOf="@+id/goPrinterChoiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRequestButton" />

    <Button
        android:id="@+id/goPrinterChoiceButton"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:text="@string/go_printer_choice"
        android:backgroundTint="@color/DarkSpecialColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkReportsButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="215dp"
        android:layout_height="188dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/checkRequestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuButton"
        app:srcCompat="@drawable/ultimaker_2_png" />

</androidx.constraintlayout.widget.ConstraintLayout>